--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #3DA9DE;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +9,28 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+h1{
+margin: 0;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.responsive-paragraph{
+  margin-top: 1em ;
+  margin-bottom: 1em;
+}
+/* In your component's CSS file */
+
+/* Styles for screens with a maximum width of 600px (typically mobile devices) */
+@media only screen and (max-width: 600px) {
+  .responsive-paragraph {
+      width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* Styles for screens wider than 600px (typically desktop devices) */
+@media only screen and (min-width: 601px) {
+  .responsive-paragraph {
+      width: 60%;
   }
 }
