--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ margin: 0;
 .responsive-paragraph{
   margin-top: 1em ;
   margin-bottom: 1em;
+  font-size: 1em;
 }
 /* In your component's CSS file */
 
